turtleart.square.Square.scala.error
Erreur de compilation :
Square:4: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
    droite ()
           ^